# what-the-rust

./: .gitignore  README.md
.claude/: settings.local.json
01_variables/: .gitignore  Cargo.toml
02_function/: Cargo.toml  README.md
09_axum_web/: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  test_dotenvy.rs  test_map_err.rs  update_table.sql  wait-for-postgres.sh
09_axum_web/docs/: 1.package和lib的区别.md  2.引用包的语法.md  3.rust包的引用规则.md  4.梳理db文件目录的导出.md  6.maperr的使用.md  为什么dotenvy不导入也可以直接使用.md
09_axum_web/src/: error.rs  lib.rs  main.rs
09_axum_web/src/config/: mod.rs
09_axum_web/src/db/: connection.rs
09_axum_web/src/db/migrations/: 20231203000001_create_users_table.sql
09_axum_web/src/handlers/: user.rs
09_axum_web/src/models/: user.rs
09_axum_web/src/routes/: user.rs
09_axum_web/src/utils/: mod.rs
09_axum_web/tests/: api_tests.rs
how-to-use-clap/: Cargo.toml  README.md
how-to-use-clap/config/: app-config.yml
how-to-use-clap/src/: app.rs  config.rs  main.rs
rust-crud-api/: .env  ARCHITECTURE.md  Cargo.toml  MIGRATION_GUIDE.md  README.md  REDIS_CACHE_GUIDE.md  demo_user_query.sh  setup_database.sh  test_middleware.sh
rust-crud-api/contracts/: Bridge2.sol
rust-crud-api/docs/: 1.pg_isready工具的使用.md  12.sql命令详解.md  2.cargo命令的使用.md  3.rust中导入包的规则.md  4.rust为什么设计结构体.md  5.self关键字的解析.md  6.new函数解析.md  7.envloger使用.md  8.不同的二进制文件入口.md  REDIS_LIBRARIES_GUIDE.md
rust-crud-api/src/: lib.rs  main.rs
rust-crud-api/src/config/: mod.rs
rust-crud-api/src/database/: connection.rs  migrations.rs  mod.rs  redis.rs
rust-crud-api/src/errors/: mod.rs
rust-crud-api/src/examples/: hyperliquid_example.rs  mod.rs
rust-crud-api/src/handlers/: health.rs  mod.rs  user.rs
rust-crud-api/src/listeners/: arbitrum_vault.rs  mod.rs
rust-crud-api/src/middleware/: logging.rs  mod.rs  response_printer.rs
rust-crud-api/src/migrations/: 20241201000001_create_users_table.sql  20251111000002_create_vault_tables.sql
rust-crud-api/src/models/: mod.rs  response.rs  user.rs
rust-crud-api/src/routes/: mod.rs
rust-crud-api/src/services/: cache.rs  mod.rs  user.rs
rust-crud-api/src/utils/: mod.rs  password.rs  validation.rs
rust-crud-api/tests/: demo_redis_cache.sh  migrate_example.sh  test_api.sh  test_redis_cache.sh
rust-crud-api/tests/common/: mod.rs
(+47 files in other folders)
